# ogdf

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  .gitpod.Dockerfile  .gitpod.yml  .travis.yml  BuildOGDF.cmake  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE.txt  Makefile.header  README.md  README.txt  config_autogen.h.in  envconfig.sh  makeMakefile.config  makeMakefile.py  makeVCProj.config  makeVCProj.py  makeVCXProj.config  makeVCXProj.py  makeVCXProjPython3.py  notes.md  ogdf-uninstalled.pc.in  ogdf.pc.in  sonar-project.properties
.github/: prune-all-caches.sh  prune-caches.sh
.github/actions/ccache-proxy/: action.yml
.github/actions/create-package/: action.yml
.github/actions/prune-cache/: action.yml  cleanup.js  main.js  package-lock.json  package.json
.github/actions/test-installed-package/: action.yml
.github/actions/test-package/: action.yml
.github/workflows/: check-build-test.yml  package-installer.yml  prune-caches.yml  release.yml  sonar.yml
_examples/: .gitignore  Makefile  Makefile.inc
_examples/basic/: Makefile
_examples/basic/gen-acyclic-graph/: main.cpp
_examples/basic/manual/: main.cpp
_examples/layout/: Makefile
_examples/layout/energy-based/: main.cpp
_examples/layout/hierarchical/: main.cpp  unix-history.gml
_examples/layout/hierarchical-ranking/: main.cpp  unix-history-time.gml
_examples/layout/hypergraph/: c17.bench  main.cpp
_examples/layout/orthogonal/: ERDiagram.gml  main.cpp
_examples/special/: Makefile
_examples/special/planarization/: main.cpp
_examples/special/system-info/: main.cpp
cmake/: FindCOIN.cmake  FindLibbfd.cmake  FindLibdw.cmake  FindLibunwind.cmake  FindPugiXML.cmake  check-mallinfo2.cmake  coin.cmake  compiler-specifics.cmake  config_autogen.h.in  doc.cmake  examples.cmake  group-files.cmake  make-user-executable.cmake  make-user-target.cmake  ogdf-config.cmake  ogdf-config.cmake.in  ogdf.cmake  tests.cmake
config/: coin.cmake  coin.vcproj.vs2005.template  coin.vcproj.vs2008.template  coin.vcxproj.filters.template  coin.vcxproj.template  ogdf-test.cmake  ogdf-test.vcxproj.filters.template  ogdf-test.vcxproj.template  ogdf.cmake  ogdf.dll.vcproj.vs2005.template  ogdf.dll.vcproj.vs2008.template  ogdf.dll.vcxproj.vs2010.template  ogdf.dll.vcxproj.vs2012.template  ogdf.vcproj.vs2003.template  ogdf.vcproj.vs2005.template  ogdf.vcproj.vs2008.template  ogdf.vcxproj.template  ogdf.vcxproj.vs2010.template  ogdf.vcxproj.vs2012.template  source_dirs.cmake
config/coinstuff/: config.h  config_default.h
config/ogdfstuff/: config_autogen.h  config_autogen.h.in
doc/: build-ogdf-docs.bat  build-ogdf-docs.sh  build.md  defines.md  dev-guide.md  govisual-footer.html  govisual-header.html  govisual.css  mainpage.dox  ogdf-doxygen.cfg  ogdf-extra.css  ogdf-footer.html  ogdf-header.html  porting.md  relnotes.md  standards.md  template.cpp  template.h  workflow.md
doc/examples/: .gitignore  examples.dox
doc/examples/basic/: gen-acyclic-graph.cpp  manual.cpp  pctree.cpp  subgraph-planarizer.cpp
doc/examples/cluster/: cluster-plan.cpp
doc/examples/decomposition/: decomposition.dox  four-block-tree.cpp
doc/examples/k-planarity/: one-planarity.cpp
doc/examples/layout/: energybased.cpp  hierarchical-ranking.cpp  hierarchical.cpp  hypergraph.cpp  multilevelmixer.cpp  orthogonal.cpp
doc/examples/special/: CMakeLists.txt  check-build-mode.cpp  subgraph-planarizer.cpp  system-info.cpp
doc/images/: insertEdgePathEmbedded.cdr
doc/porting/: baobab.md  catalpa.md  dogwood.md  elderberry.md  foxglove.md  snapshot.md  unreleased.md
doc/relnotes/: dogwood.md  elderberry.md  foxglove.md
include/coin/: CglAllDifferent.hpp  CglClique.hpp  CglConfig.h  CglCutGenerator.hpp  CglDuplicateRow.hpp  CglFlowCover.hpp  CglGomory.hpp  CglKnapsackCover.hpp  CglLandP.hpp  CglLandPSimplex.hpp  CglLandPTabRow.hpp  CglLandPUtils.hpp  CglLandPValidator.hpp  CglLiftAndProject.hpp  CglMessage.hpp  CglMixedIntegerRounding.hpp  CglMixedIntegerRounding2.hpp  CglOddHole.hpp  CglParam.hpp  CglPreProcess.hpp  CglProbing.hpp  CglRedSplit.hpp  CglRedSplitParam.hpp  CglResidualCapacity.hpp  CglSimpleRounding.hpp  CglStored.hpp  CglTreeInfo.hpp  CglTwomir.hpp  ClpCholeskyBase.hpp  ClpCholeskyDense.hpp  ClpCholeskyMumps.hpp  ClpCholeskyTaucs.hpp  ClpCholeskyUfl.hpp  ClpCholeskyWssmp.hpp  ClpCholeskyWssmpKKT.hpp  ClpConstraintLinear.hpp  ClpDualRowDantzig.hpp  ClpDualRowPivot.hpp  ClpDualRowSteepest.hpp  ClpDummyMatrix.hpp  (+155 more)
include/ogdf/: mainpage.dox
include/ogdf/abacus/: active.h  (+63 more)
ogdf/basic/: PreprocessorLayout.h
ogdf/graphalg/: ConvexHull.h
ogdf/layered/: Hierarchy.h  Level.h
src/coin/: Readme.txt
test/: fileformats_test.cpp  generators_test.cpp  main.cpp
test/include/: graphs.h  resources.h  testing.h
test/regression-tests/: main.cpp  reg-energy-based.cpp  reg-lca.cpp  reg-planar-layout.cpp  reg-planarity-test.cpp  reg-planarization-layout.cpp  reg-sugiyama.cpp
test/src/: .clang-tidy  components_test.cpp  fileformats_test.cpp  generators_test.cpp  graph_test.cpp  heap_test.cpp  lca_test.cpp  main.cpp  minisat_test.cpp  pack-resources.cpp  planarity_test.cpp  resources.cpp
util/: build.bat  compile_for_tests.sh  cpp11check.cpp  deploy_doxygen.sh  find_unused_headers.sh  fix_includes.sh  get_macro_defs.sh  make_release.sh  perform_separate_tests.sh  perform_static_analysis.sh  run_examples.sh  self-sufficiency.cpp  sonar-project.properties.template  sonar.sh  test_build_and_run.ps1  test_build_and_run.sh  test_clang_format.sh  test_coverage.sh  test_directory_structure.sh  test_doxygen.sh  test_eols.sh  test_includes.sh  test_macros.sh  test_no_typedefs.sh  test_self-sufficiency.sh  test_static_analysis.sh  util-functions.sh
util/docker/: Dockerfile  Dockerfile.template  README.md  build-all.sh  build.sh
util/git/: git-ogdf-fix-commit  git-ogdf-move-to-new-branch  git-ogdf-push-new-branch  git-ogdf-remove-merged-branches
util/style/: indent_comments.py  test_all.sh  test_clang_format.sh  test_indent_comments.sh  test_license.sh  test_line_length.sh  test_no_enums.sh  test_number_newlines.sh  test_tabs.sh
(+2164 files in other folders)
